fix: adjust mobile navigation layout; modify spacing and alignment for better usability

--- a/css/components/header.css
+++ b/css/components/header.css
@@ -314,6 +314,7 @@ nav ul li a::after {
     flex-direction: column;
     gap: var(--spacing-lg);
     padding-right: var(--spacing-lg);
+    margin-bottom: var(--spacing-md);
   }
 
   .open {
@@ -337,12 +338,11 @@ nav ul li a::after {
 
   .logo-header-nav.mobile {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    gap: var(--spacing-lg);
     width: 100%;
     border-top: 1px solid #ccc;
-    padding: var(--spacing-md) 0;
+    padding: var(--spacing-lg) 0;
     margin-top: auto;
     order: 999;
   }
